tests/ui/inference/question-mark-type-infer.stderr
error[E0283]: type annotations needed
  --> $DIR/question-mark-type-infer.rs:10:21
   |
LL |     l.iter().map(f).collect()?
   |                     ^^^^^^^ cannot infer type of the type parameter `B` declared on the method `collect`
   |
   = note: the type must implement `FromIterator<Result<i32, ()>>`
   = note: cannot satisfy `<_ as Try>::Residual == _`
   = note: the type must also implement `Try`
   = note: cannot satisfy `<_ as Try>::Output == Result<Vec<i32>, ()>`
note: required by a bound in `collect`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL
help: consider specifying the generic argument
   |
LL |     l.iter().map(f).collect::<Result<_, _>>()?
   |                            ++++++++++++++++

error[E0283]: type annotations needed
  --> $DIR/question-mark-type-infer.rs:16:29
   |
LL |     let x = l.iter().map(f).collect()?;
   |                             ^^^^^^^ cannot infer type of the type parameter `B` declared on the method `collect`
   |
   = note: the type must implement `FromIterator<Result<i32, ()>>`
   = note: cannot satisfy `<_ as Try>::Residual == _`
   = note: the type must also implement `Try`
   = note: cannot satisfy `<_ as Try>::Output == ()`
note: required by a bound in `collect`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL
help: consider specifying the generic argument
   |
LL |     let x = l.iter().map(f).collect::<Result<_, _>>()?;
   |                                    ++++++++++++++++

error[E0283]: type annotations needed
  --> $DIR/question-mark-type-infer.rs:23:39
   |
LL |     let x: Vec<i32> = l.iter().map(f).collect()?;
   |                                       ^^^^^^^ cannot infer type of the type parameter `B` declared on the method `collect`
   |
   = note: the type must implement `FromIterator<Result<i32, ()>>`
   = note: cannot satisfy `<_ as Try>::Residual == _`
   = note: the type must also implement `Try`
   = note: cannot satisfy `<_ as Try>::Output == Vec<i32>`
note: required by a bound in `collect`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL
help: consider specifying the generic argument
   |
LL |     let x: Vec<i32> = l.iter().map(f).collect::<Result<_, _>>()?;
   |                                              ++++++++++++++++

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0283`.
